# Article_OCT_Diabetic_neuropathy

./: .gitignore  README.md  pyproject.toml
docs/: TODO.md
excel filer/: 2021-05-OCTAAgeing-hand.xlsx  Data Summary October 2020.xlsx  Michelson Data Summary May 2021.xlsx  ~$2021-05-OCTAAgeing-hand.xlsx
notebooks/: Mads_init.ipynb
