[project]
name = "article-oct-diabetic-neuropathy"
version = "0.1.0"
description = "Research project on OCT for early diagnostics of diabetic neuropathy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "simpleitk>=2.5.3",
    "torch>=2.10.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.0",
    "jupyter>=1.0",
]
